// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StaticDefaultList /> shapshots should not throw if items is undefined 1`] = `
<div
  className="defaultList "
  style={undefined}
>
  
</div>
`;

exports[`<StaticDefaultList /> shapshots should render all of the items 1`] = `
<div
  className="defaultList "
  style={undefined}
>
  <div
    className="fixed row"
  />
  <div
    className="row"
  />
  <div
    className="ticketRow"
  />
  <div
    className="ticketRow"
  />
  <div
    className="ticketRow"
  />
  <div
    className="ticketRow"
  />
  <div
    className="ticketRow"
  />
  <div
    className="ticketRow"
  />
  <div
    className="ticketRow"
  />
</div>
`;

exports[`<StaticDefaultList /> shapshots should render nothing if no items 1`] = `
<div
  className="defaultList "
  style={undefined}
>
  
</div>
`;
